# llm-trainer

./: .gitignore  NER_LABELING_DATA_REFERENCE.md  README.md  demo_structured_output.py  example_conversation_training.sh  example_usage.sh  inference_vllm_structured.py  main.py  pyproject.toml  test_conversation_format.py  test_instruction_styles.py  test_schema.json  test_simple_vllm.py  test_texts.txt  vllm_usage_examples.sh
configs/: gemma3_conversation.yaml  lora_config.yaml  quick_test.yaml  qwen3_conversation.yaml  sft_config.yaml  train_config.yaml
data/schemas/: emergency_ner_analysis.json  emergency_ner_schema.json  extracted_entities_analysis.json  extracted_entities_schema.json  gold_answer_analysis.json  gold_answer_schema.json
docs/: EMERGENCY_NER_SUMMARY.md  PROJECT_STRUCTURE.md  STRUCTURED_OUTPUT_GUIDE.md
examples/: example_usage.sh  vllm_usage_examples.sh
scripts/: analyze_gold_answers.py  check_gold_answer.py  convert_to_conversation.py  decode_vllm_output.py  extract_entities_from_csv.py  extract_real_gold_answer.py  generate_conversation_data.py  generate_structured_data.py  prepare_data.py  train_lora.py  train_sft.py  validate_conversation_data.py
src/: data_processor.py  inference.py  inference_structured.py  inference_vllm_structured.py  model_config.py  train.py
tests/: test_emergency_ner.py  test_extracted_schema.py  test_vllm_inference.py
